fix spacing

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -84,14 +84,14 @@
 .masteriyo-col-8 {
 	flex: 0 0 66.6666%;
 	max-width: 66.6666%;
-	padding: $spacing_10px;
+	padding: $spacing_15px;
 	width: 66.6666%;
 }
 
 .masteriyo-col-4 {
 	flex: 0 0 33.3333%;
 	max-width: 33.3333%;
-	padding: $spacing_10px;
+	padding: $spacing_15px;
 	width: 33.3333%;
 }
 
