--- a/assets/scss/base/_container.scss
+++ b/assets/scss/base/_container.scss
@@ -8,6 +8,4 @@
 	width: 1170px;
 	max-width: 100%;
 	margin: 0 auto;
-	padding-left: $spacing_10px;
-	padding-right: $spacing_10px;
 }
