--- a/assets/scss/pages/_course-list.scss
+++ b/assets/scss/pages/_course-list.scss
@@ -71,8 +71,8 @@
 	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: flex-start;
-	margin-left: -#{$spacing_10px};
-	margin-right: -#{$spacing_10px};
+	margin-left: -#{$spacing_15px};
+	margin-right: -#{$spacing_15px};
 	margin-top: -#{$spacing_15px};
 
 	&--card {
