--- a/assets/scss/pages/_single-course.scss
+++ b/assets/scss/pages/_single-course.scss
@@ -4,8 +4,8 @@
 	display: flex;
 	flex-wrap: wrap;
 	margin-top: $spacing_32px;
-	margin-left: -#{$spacing_10px};
-	margin-right: -#{$spacing_10px};
+	margin-left: -#{$spacing_15px};
+	margin-right: -#{$spacing_15px};
 	flex-direction: row;
 
 	&--main {
@@ -255,6 +255,8 @@
 .masteriyo-related-post {
 	margin-top: $spacing_24px;
 	width: 100%;
+	margin-left: -#{$spacing_15px};
+	margin-right: -#{$spacing_15px};
 
 	&__title {
 		padding: 0 $spacing_15px;
