--- a/assets/scss/utility/_columns.scss
+++ b/assets/scss/utility/_columns.scss
@@ -5,7 +5,7 @@
 		.masteriyo-col {
 			flex: 0 0 25%;
 			max-width: 25%;
-			padding: $spacing_10px;
+			padding: $spacing_15px;
 			width: 25%;
 
 			.difficulty-badge {
@@ -34,7 +34,7 @@
 		.masteriyo-col {
 			flex: 0 0 33.333333%;
 			max-width: 33.333333%;
-			padding: $spacing_10px;
+			padding: $spacing_15px;
 			width: 33.3333%;
 		}
 	}
@@ -45,7 +45,7 @@
 		.masteriyo-col {
 			flex: 0 0 50%;
 			max-width: 50%;
-			padding: $spacing_10px;
+			padding: $spacing_15px;
 			width: 50%;
 		}
 	}
@@ -56,7 +56,7 @@
 		.masteriyo-col {
 			flex: 0 0 100%;
 			max-width: 100%;
-			padding: $spacing_10px;
+			padding: $spacing_15px;
 			width: 100%;
 		}
 	}
